--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "axios": "^0.19.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "kcd-scripts": "^6.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.1",
+    "swr": "^0.2.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext ts,tsx src"
   },
   "eslintConfig": {
     "extends": "react-app"
